--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ aiosignal==1.3.1
 async-timeout==4.0.2
 asynctest==0.13.0
 attrs==22.2.0
+beautifulsoup4==4.11.2
 certifi==2022.12.7
 charset-normalizer==2.1.1
 click==8.1.3
@@ -16,6 +17,7 @@ MarkupSafe==2.1.2
 multidict==6.0.4
 openai==0.26.5
 requests==2.28.2
+soupsieve==2.3.2.post1
 tqdm==4.64.1
 typing_extensions==4.4.0
 urllib3==1.26.14
