--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ certifi==2022.12.7
 charset-normalizer==2.1.1
 click==8.1.3
 Flask==2.2.2
+Flask-Cors==3.0.10
 frozenlist==1.3.3
 idna==3.4
 importlib-metadata==6.0.0
@@ -17,6 +18,7 @@ MarkupSafe==2.1.2
 multidict==6.0.4
 openai==0.26.5
 requests==2.28.2
+six==1.16.0
 soupsieve==2.3.2.post1
 tqdm==4.64.1
 typing_extensions==4.4.0
